test/com/facebook/buck/parser/testdata/python_user_defined_rules/errors/rule_in_build/BUCK.fixture
load("//errors/rule_in_build:example_rule.bzl", "impl")

rule(implementation = impl, attrs = {})
